# foveated_stereo

./: CMakeLists.txt  README.md
cpp/: compile.sh  foveal.cpp  foveal_interface.m  foveal_interface_mex.cpp
cpp/logpolar/: logpolar.cpp  logpolar.hpp
matlab/: DrawRefFrame.m  README.txt  conventional_stereo.m  conventional_stereo_interface_mex.cpp  foveal_stereo.m  foveal_stereo_back.m  foveal_stereo_backup.m  foveated_stereo.m  foveated_stereo_interface_mex.cpp  line_line_closest_point.m  logpolar_disparity_maps.m  plot_gaussian_ellipsoid.m  ricardo_filter.m  sigma_points.m  sigmas.m  test.m  unscent_transform_image.m  untitled.m
matlab/HVS/: EgoSphere.m  RetinalCortical.m  SingleEye.m  SphereAndDome.m  imgpolarcoord.m  test.m
matlab/ROS/: activeVision.m  activeVisionNoPlots.m  ciplot.m  make_video.m  memory_bias_parse.m  memory_bias_plot.m  multiple_bags.m  multiple_bags_parse.m  multiple_bags_plots.m  single_bag.m  stereoCallback.m  test.m  untitled.m
matlab/bigplot/: bigsubplot.m  license.txt
matlab/datasets/: test.m
matlab/logpolar/: logsampback.m
matlab/unscent_transform_tests/: plots.m  unscent_foveal_test.m  uscent_conventional_test.m  uscent_normal_test2.m
src/: ConventionalStereo.cpp  ConventionalStereo.h  EgoSphere.h  EgoSphere.h_back  PeripheralFovealStereo.cpp  PeripheralFovealStereo.h  PeripheralStereo.cpp  PeripheralStereo.h  Stereo.cpp  Stereo.h  structures.h  test.cu  test.h
src/stereo_sensors/: Cartesian.cpp  Cartesian.h  PeripheralFoveal.cpp  PeripheralFoveal.h  Periphery.cpp  Periphery.h  StereoData.cpp  StereoData.h  StereoSensor.cpp  (+8 more)
(+8 files in other folders)
